--- a/public/resume.html
+++ b/public/resume.html
@@ -1,41 +1,32 @@
 <header>
     <h1><span class="name">Tucker McLean</span><span class="blink"></span></h1>
     <p class="center"><span class="nowrap">Beaverton, Oregon</span> | <a href="tel:+18124304200">812-430-4200</a> | <a class="email" href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> | <a class="domain" href="https://tuckermclean.com/">tuckermclean.com</a> <a href="https://www.linkedin.com/in/tucker-mclean/"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="currentColor" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a></p>
-    <h3 style="float: none;" class="center">Software Engineering &amp; Validation Specialist<br />Structured Code Analyst | Linux, Cloud &amp; Automation</h3>
+    <h3 style="float: none;" class="center">Linux Systems Engineer &amp; Software Generalist</h3>
 </header>
 <section>
     <h2>Summary</h2>
-    <p>Experienced IT generalist with experience across three decades in IT, blending depth in software engineering, network validation, and technical support engineering. Leveraging structured code analysis to improve software quality, accelerate development cycles, and optimize system performance across Linux, Windows, and cloud environments (AWS).</p>
+    <p>Engineer, writer, and systems thinker with a lifelong commitment to open technology and personal freedom. Experienced across validation, networking, and software engineering, specializing in making complex systems clear, reliable, and automatable. Known for cross-disciplinary work that bridges firmware to frontend and design to documentation.</p>
 
-    <h3>Key Strengths:</h3>
+    <h3>Core Strengths:</h3>
     <ul>
-        <li><strong>Software Engineering &amp; Code Analysis:</strong> Independent reviews, interface assessments, and quality assurance.</li>
-        <li><strong>AI-Augmented Development:</strong> Authoring precise technical requirements for AI-driven software patch generation.</li>
-        <li><strong>Technical Validation &amp; Automation:</strong> Extensive hands-on experience with network infrastructure, automated testing (Python, Bash, PowerShell), and infrastructure management (Terraform, Ansible).</li>
-        <li><strong>Customer &amp; Cross-team Collaboration:</strong> Clearly communicating complex technical details and solutions to engineering teams and stakeholders.</li>
-    </ul>
-
-    <h3>Recent Experience Highlights:</h3>
-    <ul>
-        <li>Conduct independent code and patch reviews, analyzing GitHub issues, pull requests, and CI/CD test artifacts to drive software quality improvements.</li>
-        <li>Develop problem requirements and technical specifications to guide AI models and software engineers, significantly enhancing development efficiency.</li>
-        <li>Implement robust validation and testing environments, improving software reliability and reducing reproduction and troubleshooting times by up to 50%.</li>
-        <li>Optimize open-source project documentation, providing precise, actionable feedback to accelerate team onboarding and issue resolution.</li>
+        <li>Linux system architecture · Firmware &amp; network validation · CI/CD &amp; automation (Python, Bash, Ansible, Terraform)</li>
+        <li>Containerization &amp; orchestration (K3s/Kubernetes, Docker, Proxmox)</li>
+        <li>Open-source collaboration, documentation, and user experience design</li>
+        <li>Cross-team communication—bridging engineers, support, and leadership through clarity</li>
     </ul>
 </section>
 <section>
-    <h2>Experience</h2>
+    <h2>Recent Work</h2>
     <article>
         <h3>Freelance</h3>
         <h4>Software Engineering & AI Data Specialist</h4>
         <p class="date">Feb 2025 - Present</p>
         <ul>
-            <li>Support software engineering initiatives as a senior reviewer by analyzing GitHub issues, patches, and CI/CD test artifacts to optimize development workflows.</li>
-            <li>Author problem requirements and technical specifications to assist AI models and engineers in generating high-quality software patches.</li>
-            <li>Conduct independent code reviews to assess patch quality, interface changes, and test coverage against project standards.</li>
-            <li>Interpret API behaviors, test results, and system logs to create actionable insights for engineering teams and AI development.</li>
-            <li>Enhance open-source project documentation and onboarding materials through precise analysis and structured feedback.</li>
-            <li>Apply skills in Linux systems, Git workflows, Agile development methodologies, and quality assurance practices in real-world software ecosystems.</li>
+            <li>Performed deep technical reviews of open-source projects, analyzing GitHub issues, patches, and CI/CD outputs.</li>
+            <li>Authored structured technical specifications enabling AI-assisted code generation.</li>
+            <li>Built and maintained containerized validation environments and reproducible test harnesses.</li>
+            <li>Improved documentation and onboarding workflows for developer teams.</li>
+            <li><strong>Stack:</strong> Linux, Docker, Git, Python, Node.js, Go, API analysis, CI/CD.</li>
         </ul>
     </article>
     <article>
@@ -43,20 +34,20 @@
         <h4>Technology Project/Program Management Analyst</h4>
         <p class="date">April 2024 - September 2024</p>
         <ul>
-            <li>Managed software legal compliance (SWLC) reviews for driver and firmware releases, ensuring regulatory adherence.</li>
-            <li>Provided pre-release and final builds of NIC drivers and firmware to enterprise customers, supporting top-tier accounts.</li>
-            <li>Curated a PowerBI dashboard to track technical and security advisories,improving visibility for key stakeholders.</li>
-            <li>Served as a technical liaison, guiding teams in our network product validation lab with advanced Linux and networking expertise.</li>
+            <li>Served as software legal compliance (SWLC) liaison for network interface drivers and firmware.</li>
+            <li>Performed builds of drivers, firmware and tools for top-tier accounts.</li>
+            <li>Maintained technical and security advisory document tracking dashboards in PowerBI.</li>
+            <li>Provided senior-level technical guidance in the network validation lab.</li>
         </ul>
     </article>
     <article>
         <h4>Network Product Validation Technician</h4>
         <p class="date">June 2022 - April 2024</p>
         <ul>
-            <li>Validated and tested network interface cards (NICs), drivers, and firmware across Linux, Windows, and VMware ESXi.
-            <li>Developed an automated OS deployment system, reducing issue reproduction time by 50% and streamlining validation workflows.</li>
-            <li>Led troubleshooting efforts for enterprise customers, analyzing network and system logs to diagnose critical issues.</li>
-            <li>Optimized lab automation processes, implementing Python and Bash scripting for validation testing and system configurations.</li>
+            <li>Designed and deployed an automated OS provisioning platform using PXE and iPXE—cut reproduction time by half.</li>
+            <li>Validated NIC firmware, drivers, and virtualization workloads across Linux, ESXi, and Windows.</li>
+            <li>Wired 100G fiber backbones and managed rack-level infrastructure automation.</li>
+            <li>Created Python tooling for switch management and test automation.</li>
         </ul>
     </article>
     <article>
@@ -64,93 +55,50 @@
         <h4>Engineer I</h4>
         <p class="date">August 2021 - June 2022</p>
         <ul>
-            <li>Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers.</li>
-            <li>Managed switch and server hardware across diverse enterprise environments.</li>
-            <li>Implemented custom scripting solutions for process automation and test environment optimization.</li>
+            <li>Built customer issue-reproduction environments for Linux and Windows networking stacks.</li>
+            <li>Authored automation scripts for validation processes and data collection.</li>
     </article>
     <article>
         <h3>Bertram Communications | Random Lake, Wisconsin</h3>
         <h4>Developer / Technical Support Engineer</h4>
         <p class="date">November 2019 - March 2021</p>
         <ul>
-            <li>Provided technical support for over 300 wireless and fiber ISPs, diagnosing complex network and system issues affecting roughly 100,000 end customers.</li>
-            <li>Developed and maintained our ISP management SaaS solution, resolving software bugs and optimizing features.</li>
-            <li>Built a support and development test lab, implementing extensive documentation for troubleshooting procedures.</li>
-        </ul>
-    </article>
-    <article>
-        <h3>Lakeshore Technical College | Cleveland, Wisconsin</h3>
-        <h4>IT Support</h4>
-        <p class="date">June 2019 - November 2019</p>
-        <ul>
-            <li>Provided IT assistance for stakeholders within a Windows enterprise network, supporting Windows and macOS clients.</li>
-            <li>Delivered technical and hands-on support, ensuring efficient issue resolution.</li>
-        </ul>
-    </article>
-    <article>
-        <h3>Central Oregon Internet | Bend, Oregon</h3>
-        <h4>Technical Support / Linux System Administrator</h4>
-        <p class="date">March 2002 - June 2003</p>
-        <ul>
-            <li>Delivered technical support for clients across Windows, macOS, and Linux environments.</li>
-            <li>Maintained and optimized Debian Linux servers, improving system reliability.</li>
-            <li>Designed and implemented a spam and virus control system, enhancing security.</li>
+            <li>Developed and maintained an ISP management SaaS (Powercode) used by 300+ ISPs.</li>
+            <li>Implemented DHCP Option 82 and RADIUS auth support, improving provisioning reliability.</li>
+            <li>Built internal test lab and knowledge base for support engineers.</li>
+            <li><strong>Stack:</strong> PHP, MySQL, CentOS, Linux networking, DHCP, RADIUS</li>
         </ul>
     </article>
 </section>
 <section>
-    <h2>Top Skills</h2>
-    <h3>Cloud &amp; Infrastructure:</h3>
+    <h2>Earlier Experience</h2>
     <ul>
-        <li><strong>AWS Services:</strong> Lambda, API Gateway, CloudFront, S3, DynamoDB, Cognito, SQS, Route 53</li>
-        <li><strong>Infrastructure as Code (IaC):</strong> Terraform, Ansible</li>
-        <li><strong>Containerization &amp; Virtualization:</strong> Docker, VMware, Proxmox</li>
+        <li>Lakeshore Technical College — IT Support (2019)</li>
+        <li>Central Oregon Internet — Linux Sysadmin / Tech Support (2002-2003)</li>
     </ul>
-    <h3>Programming &amp; Development:</h3>
+<section>
+    <h2>Technical Toolbox</h2>
     <ul>
-        <li><strong>Languages:</strong> Python, Node.js, PHP, JavaScript</li>
-        <li><strong>Tools:</strong> Git version control, CI/CD pipelines, Jenkins, Jira</li>
-        <li><strong>Full-Stack Web Development</strong></li>
-    </ul>
-    <h3>Enterprise Systems:</h3>
-    <ul>
-        <li><strong>Linux Distributions:</strong> RHEL, Debian, Ubuntu, CentOS, Amazon Linux</li>
-        <li><strong>Environments:</strong> On-prem, datacenter, cloud</li>
-        <li><strong>Networking:</strong> Cisco, HP, Extreme Networks</li>
-        <li><strong>Security:</strong> Firewalls, VPNs, OAuth/OIDC, API Security, Network Security</li>
-    </ul>
-    <h3>Linux Services:</h3>
-    <ul>
-        <li><strong>Web Servers:</strong> Nginx, Apache, Caddy, Traefik</li>
-        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
-        <li><strong>DNS:</strong> BIND, PowerDNS, dnsmasq</li>
-        <li><strong>DHCP:</strong> ISC DHCP, dnsmasq, Kea</li>
-        <li><strong>Storage:</strong> Ceph, GlusterFS</li>
-        <li><strong>File Sharing:</strong> Samba, NFS</li>
-        <li><strong>Mail Servers:</strong> Postfix, Dovecot, qmail</li>
-        <li><strong>Virtualization:</strong> KVM, Proxmox</li>
-        <li><strong>Containerization:</strong> Docker, Podman</li>
-        <li><strong>Automation:</strong> Ansible, Terraform</li>
-    </ul>
-    <h3>Management:</h3>
-    <ul>
-        <li><strong>Project Management:</strong> Jira, ClickUp</li>
-        <li><strong>Documentation:</strong> Markdown, LaTeX</li>
-        <li><strong>Technical Writing:</strong> User manuals, API documentation</li>
-        <li><strong>Customer Support:</strong> Helpdesk, ticketing systems</li>
-        <li><strong>Training &amp; Mentoring:</strong> Onboarding, knowledge sharing</li>
+        <li><strong>Platforms:</strong> Linux (Debian, Ubuntu, RHEL, Arch), BSD, Windows, VMware, Proxmox</li>
+        <li><strong>Cloud & IaC:</strong> AWS (S3, Lambda, API Gateway, CloudFront, Route 53), Terraform, Ansible</li>
+        <li><strong>Containers &amp; Orchestration:</strong> Docker, Podman, K3s/Kubernetes, Helm, FluxCD</li>
+        <li><strong>Networking:</strong> WireGuard, VLANs, DHCP/Kea, BIND, Traefik, Nginx, Ceph, GlusterFS</li>
+        <li><strong>Languages:</strong> Python, Bash, PHP, JavaScript/Node.js, Go, Rust</li>
+        <li><strong>Automation &amp; CI:</strong> GitHub Actions, Jenkins, Power Automate</li>
+        <li><strong>Documentation:</strong> Markdown, LaTeX, technical writing, user onboarding</li>
     </ul>
 </section>
-<div class="print-sidebar">
 <section>
+    <h2>Education & Certifications</h2>
+    <h3>Lakeshore Technical College</h3>
+    <p class="summary">Associate's Coursework in IT Networking</p>
     <h2>Certifications</h2>
     <p>CompTIA A+</p>
     <p>AWS Certified Cloud Practitioner</p>
 </section>
 <section>
-    <h2>Education</h2>
-    <h3>Lakeshore Technical College</h3>
-    <p class="summary">Associate's Coursework in IT Networking</p>
+    <h2>Projects &amp; Homelab</h2>
+    <p><strong>Self-hosted Kubernetes hybrid cloud:</strong> Multi-node K3s with GitOps (FluxCD), Traefik Ingress, Longhorn storage, Authentik SSO.</p>
+    <p><strong>PXE Deployment System:</strong> Custom Python iPXE menu generator for Red Hat, Debian, Windows, and VMware installers.</p>
+    <p><strong>Home Infrastructure:</strong> Cluster running open-source media services, observability stack, and automation pipelines.</p>
 </section>
-</div>
-<p class="keywords">datacenter technician | project management skills | dropbox | verbal and written communication skills | management skills | computer skills | computer science | computer networking | computer hardware | computer engineering | computer engineering technology | computer engineering technician | computer and information systems | computer and information systems security | cloud computing | cloud architecture | cloud engineer | cloud architect | cloud administrator | cloud computing security | cloud computing technology | cloud computing management | cloud computing infrastructure | cloud computing architecture | cloud computing applications | cloud computing administration | validation engineer | validation technician | network validation engineer</p>
